@@ -1,5 +1,11 @@
 gsKit ChangeLog:
 
+-> 01/16/05 - Chris Gilbert (Neovanglist)
+   * More optimizations!
+   * Now using the scratchpad more intensively duing renderlist building.
+   * Packed the Element structure more tightly, and made it an aligned non-pointer array in the Queue.
+   * NOTICE: Modified the GS_AXIS_ macros so that X, U, and V are the same value, so I only have to check on one in gsKit_scale. (Better performance)
+
 -> 01/15/05 - Chris Gilbert (Neovanglist)
    * Tons of optimizations!
    * Now using toSPR as well as fromSPR.
